<resources>
    <string name="app_name">TalkBack</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_about">About...</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Ask Me A Question About....</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Preference Titles -->
    <string name="model_file_title">Model File</string>

    <!-- Messages Preferences -->
    <string name="verbosity_title">Answer Verbosity</string>
    <string name="verbosity_header">Answer Quality</string>
    <string name="response_quality_question_title">Ask for Response Quality</string>
    <string name="response_quality_question_header">Response Quality</string>
</resources>